# grid-bot-validation

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  RULES.md  TODO.md  main.py  pyproject.toml  stack.md
apps/backtest/: README.md  debug_walkthrough.py  pyproject.toml
apps/backtest/conf/: backtest.yaml.example  instruments_cache.json
apps/backtest/src/backtest/: __init__.py  cache_lock.py  cache_validation.py  config.py  data_provider.py  engine.py  executor.py  fill_simulator.py  instrument_info.py  main.py  order_manager.py  position_tracker.py  reporter.py  risk_limit_info.py  runner.py  session.py  tier_serialization.py
apps/backtest/tests/: conftest.py  test_cache_lock.py  test_check_tier_drift.py  test_config.py  test_data_provider.py  test_engine.py  test_executor.py  test_fill_simulator.py  test_fill_simulator_event_follower.py  test_instrument_info.py  test_order_manager.py  test_position_tracker.py  test_reporter.py  test_risk_limit_info.py  test_risk_limit_integration.py  test_runner.py  test_session.py
apps/comparator/: pyproject.toml
apps/comparator/src/comparator/: __init__.py  config.py  equity.py  loader.py  main.py  matcher.py  metrics.py  position_loader.py  position_metrics.py  reporter.py
apps/comparator/tests/: conftest.py  test_equity.py  test_loader.py  test_main.py  test_matcher.py  test_metrics.py  test_position_metrics.py  test_reporter.py
apps/event_saver/: pyproject.toml
apps/event_saver/src/event_saver/: __init__.py  config.py  main.py  reconciler.py
apps/event_saver/tests/: __init__.py  test_config.py  test_main.py  test_private_collector.py  test_public_collector.py  test_reconciler.py  test_writers.py
apps/gridbot/: pyproject.toml
apps/gridbot/conf/: gridbot.yaml.example
apps/gridbot/src/gridbot/: __init__.py  auth_cooldown_manager.py  config.py  executor.py  health.py  main.py  notifier.py  orchestrator.py  order_link_id.py  position_fetcher.py  reconciler.py  retry_queue.py  runner.py  safety_caps.py  truncate_breaker.py
apps/gridbot/tests/: __init__.py  conftest.py  test_auth_cooldown_manager.py  test_config.py  test_executor.py  test_executor_health.py  test_grid_state_writer.py  test_health.py  test_issue_206_startup_reconcile_race.py  test_main.py  test_notifier.py  test_orchestrator.py  test_orchestrator_divergence.py  test_orchestrator_health_status.py  test_order_link_id.py  test_position_fetcher.py  test_reconciler.py  test_retry_queue.py  test_runner.py  test_runner_divergence.py  test_runner_lowbalance_storm.py  test_runner_truncate_storm.py  test_safety_caps.py  test_truncate_breaker.py
apps/importer/: pyproject.toml
apps/importer/conf/: smoke_replay.yaml
apps/importer/src/importer/: __init__.py  config.py  density.py  fetch_source_db.py  fetch_source_http.py  main.py  mapping.py  output_db.py  source.py  validate.py
apps/importer/tests/: conftest.py  test_config.py  test_density.py  test_fetch_db.py  test_fetch_http.py  test_mapping.py  test_output_db.py  test_resume.py  test_validate_ohlc.py
apps/live_check/: pyproject.toml
apps/live_check/conf/: live_check.yaml
apps/live_check/src/live_check/: __init__.py  config.py  ground_truth.py  main.py  render.py  runner.py  shared_wallet.py  verdict.py  window.py
apps/live_check/tests/: conftest.py  test_config.py  test_freshness.py  test_ground_truth.py  test_guard.py  test_naive_utc.py  test_readonly.py  test_readonly_run.py  test_render.py  test_runner.py  test_shared_wallet.py  test_verdict.py  test_watch.py  test_window.py
apps/pnl_checker/: README.md  pyproject.toml
apps/pnl_checker/conf/: pnl_checker.yaml.example
apps/pnl_checker/src/pnl_checker/: calculator.py  comparator.py  config.py  fetcher.py  main.py  reporter.py
apps/pnl_checker/tests/: conftest.py  test_calculator.py  test_comparator.py  test_config.py  test_fetcher.py  test_integration_risk_tiers.py  test_main.py  test_reporter.py
apps/recorder/: pyproject.toml
apps/recorder/conf/: recorder.yaml.example  recorder_ltcusdt.yaml
apps/recorder/src/recorder/: __init__.py  config.py  main.py  prepare_session.py  recorder.py  shared_db_parents.py
apps/recorder/tests/: conftest.py  test_config.py  test_health.py  test_initial_rest_snapshot.py  test_main.py  test_prepare_recorder_session.py  test_recorder.py  test_recorder_shared_db.py  test_start_recorder_check.py
apps/replay/: pyproject.toml
apps/replay/conf/: .gitignore  replay.yaml.example  replay_0045_validation.yaml.example  replay_ltcusdt_phase4.yaml  replay_ltcusdt_phase4.yaml.example
apps/replay/src/replay/: __init__.py  config.py  engine.py  main.py  multi_config.py  multi_engine.py  snapshot_loader.py
apps/replay/tests/: conftest.py  test_collateral_mark_feed.py  test_config.py  test_engine.py  test_engine_collateral_integration.py  test_engine_event_follower.py  test_engine_seed.py  test_main.py  test_multi_config.py  test_multi_engine.py  test_snapshot_loader.py
bbu_reference/backtest_reference/bbu_backtest-main/: .gitignore  CLAUDE.md  Makefile  POSITION_TESTING.md  README.md  demo_backtest.py  demo_position_management.py  main.py  pyproject.toml  ruff.toml  test_my_position.py
bbu_reference/backtest_reference/bbu_backtest-main/MDs/: BACKTEST_USAGE_GUIDE.md  GRID_BOT_BACKTEST_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  ORDER_DIRECTION_ARCHITECTURE_PLAN.md  POSITION_MANAGEMENT_COMPLETED.md  README.md  TODO.md  (+1 more)
bbu_reference/bbu2-master/: .gitignore  CLAUDE.md  Makefile  README.md  TelegramExcBot.py  bybit_api_usdt.py  controller.py  db_files.py  greed.py  loggers.py  main.py  position.py  pyproject.toml  settings.py  strat.py
bbu_reference/bbu2-master/conf/: config.yaml
bbu_reference/bbu2-master/misc/: bbu.conf  read_statuses.py  test_bybit.py
bbu_reference/bbu2-master/tests/: test_place_greed_orders.py  test_position_low_margin.py
shared/db/: pyproject.toml
shared/db/tests/: __init__.py  conftest.py  test_database.py  test_identity.py  test_init_db.py  test_migrate_0042.py  test_models.py  test_repositories.py  test_repository_imports.py  test_utils.py
(+319 files in other folders)
