[project]
name = "grid-bot-validation"
version = "0.1.0"
description = "Grid trading bot validation and backtesting framework"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "shared/*", "apps/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.0",
    "gridbot",
]

[tool.uv.sources]
gridbot = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["packages/gridcore/src", "packages/bybit_adapter/src", "shared/db/src", "apps/event_saver/src", "apps/gridbot/src", "apps/backtest/src", "apps/comparator/src"]
testpaths = ["packages/gridcore/tests", "packages/bybit_adapter/tests", "shared/db/tests", "apps/event_saver/tests", "apps/gridbot/tests", "apps/backtest/tests", "apps/comparator/tests", "tests/integration"]
asyncio_mode = "auto"
