[project]
name = "grid-bot-validation"
version = "0.1.0"
description = "Grid trading bot validation and backtesting framework"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "shared/*", "apps/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "gridbot",
    "pnl-checker",
    "importer",
]

[tool.uv.sources]
gridbot = { workspace = true }
pnl-checker = { workspace = true }
importer = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["packages/gridcore/src", "packages/bybit_adapter/src", "shared/db/src", "apps/event_saver/src", "apps/gridbot/src", "apps/backtest/src", "apps/comparator/src", "apps/recorder/src", "apps/replay/src", "apps/pnl_checker/src", "apps/live_check/src", "apps/importer/src", "tests/integration"]
testpaths = ["packages/gridcore/tests", "packages/bybit_adapter/tests", "shared/db/tests", "apps/event_saver/tests", "apps/gridbot/tests", "apps/backtest/tests", "apps/comparator/tests", "apps/recorder/tests", "apps/replay/tests", "apps/pnl_checker/tests", "apps/live_check/tests", "apps/importer/tests", "tests/integration"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
markers = [
    "real_instrument_fetch: opt out of the default _fetch_instrument_info patch (feature 0090)",
]

[tool.ruff]
# Lint all maintained code; skip intentionally-unmaintained trees (issue #181).
# Additive to ruff's built-in defaults (.venv, __pycache__, .git, build dirs, etc.).
exclude = [
    "apps/backtest/debug_walkthrough.py",  # interactive debug walkthrough; not app code
    "bbu_reference",                        # vendored bbu2 reference; not maintained, has its own ruff config
    "scripts",                              # one-off research/migration scripts; disposable, not imported by apps.
                                            # Exception: scripts/check_tier_drift.py is operational (weekly CI) and
                                            # linted explicitly via the Makefile lint target (issue #215).
]
