[project]
name = "comparator"
version = "0.1.0"
description = "Backtest vs live trade validation comparator"
requires-python = ">=3.11"
dependencies = [
    "grid-db",
    "gridcore",
    "backtest",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[tool.uv.sources]
grid-db = { workspace = true }
gridcore = { workspace = true }
backtest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comparator"]
