[project]
name = "event-saver"
version = "0.1.0"
description = "Data collection service for grid bot validation"
requires-python = ">=3.11"
dependencies = [
    "bybit-adapter",
    "grid-db",
    "pydantic-settings>=2.0",
]

[tool.uv.sources]
bybit-adapter = { workspace = true }
grid-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/event_saver"]
