[project]
name = "gridbot"
version = "0.1.0"
description = "Multi-tenant grid trading bot using gridcore strategy engine"
requires-python = ">=3.11"
dependencies = [
    "gridcore",
    "bybit-adapter",
    "grid-db",
    "event-saver",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytelegrambotapi>=4.24.0",
]

[tool.uv.sources]
gridcore = { workspace = true }
bybit-adapter = { workspace = true }
grid-db = { workspace = true }
event-saver = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridbot"]
