[project]
name = "importer"
version = "0.1.0"
description = "One-way import adapter: trad_save_history ticker_data -> replay-compatible SQLite (feature 0093)"
requires-python = ">=3.11"
dependencies = [
    "grid-db",
    "replay",
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[tool.uv.sources]
grid-db = { workspace = true }
replay = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/importer"]
