[project]
name = "live-check"
version = "0.1.0"
description = "Continuous replay-vs-live reconciliation checker (feature 0088)"
requires-python = ">=3.11"
dependencies = [
    "replay",
    "comparator",
    "backtest",
    "grid-db",
    "gridbot",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[tool.uv.sources]
replay = { workspace = true }
comparator = { workspace = true }
backtest = { workspace = true }
grid-db = { workspace = true }
gridbot = { workspace = true }

[project.scripts]
live-check = "live_check.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/live_check"]
