[project]
name = "grid-db"
version = "0.1.0"
description = "Multi-tenant database layer for grid-bot-validation"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grid_db"]
